Updated start scripts to load custom JAVA OPTS
Signed-off-by: Madhan Neethiraj <madhan@apache.org>